--- a/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
@@ -13,7 +13,7 @@
       <Button fx:id="giftFloralDelivery" layoutX="14.0" layoutY="136.0" mnemonicParsing="false" onAction="#giftFloralDeliveryButtonClick" text="Gift and Floral Delivery " />
       <Button fx:id="languageButton" layoutX="14.0" layoutY="171.0" mnemonicParsing="false" onAction="#languageInterpreter" text="Langugage Interpreter" />
       <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" text="Sanitation Services" />
-      <Button layoutX="14.0" layoutY="243.0" mnemonicParsing="false" text="Laundry Services" />
+      <Button layoutX="14.0" layoutY="243.0" mnemonicParsing="false" onAction="#laundryServicesButtonClick" text="Laundry Services" />
       <Button layoutX="14.0" layoutY="280.0" mnemonicParsing="false" text="Religious Request" />
       <Button layoutX="14.0" layoutY="315.0" mnemonicParsing="false" text="Internal Patient Transportation " />
       <Button layoutX="14.0" layoutY="350.0" mnemonicParsing="false" text="External Patient Transportation " />
