--- a/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
@@ -15,7 +15,7 @@
       <Button layoutX="14.0" layoutY="207.0" mnemonicParsing="false" text="Sanitation Services" />
       <Button layoutX="14.0" layoutY="243.0" mnemonicParsing="false" onAction="#laundryServicesButtonClick" text="Laundry Services" />
       <Button layoutX="14.0" layoutY="280.0" mnemonicParsing="false" text="Religious Request" />
-      <Button layoutX="14.0" layoutY="315.0" mnemonicParsing="false" text="Internal Patient Transportation " />
+      <Button layoutX="14.0" layoutY="315.0" mnemonicParsing="false" onAction="#internalPatientTransportationButtonClick" text="Internal Patient Transportation " />
       <Button layoutX="14.0" layoutY="350.0" mnemonicParsing="false" text="External Patient Transportation " />
       <Button layoutX="207.0" layoutY="350.0" mnemonicParsing="false" text="Security Services" />
       <Button layoutX="207.0" layoutY="315.0" mnemonicParsing="false" onAction="#audioVideoServiceButtonClick" text="Audio/Visual Services" />
