--- a/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
@@ -17,7 +17,7 @@
       <Button fx:id="religiousRequest" layoutX="14.0" layoutY="280.0" mnemonicParsing="false" onAction="#religiousServicesButtonClick" text="Religious Request" />
       <Button layoutX="14.0" layoutY="315.0" mnemonicParsing="false" text="Internal Patient Transportation " />
       <Button layoutX="14.0" layoutY="350.0" mnemonicParsing="false" text="External Patient Transportation " />
-      <Button layoutX="207.0" layoutY="350.0" mnemonicParsing="false" text="Security Services" />
+      <Button layoutX="207.0" layoutY="350.0" mnemonicParsing="false" onAction="#religiousServicesButtonClickreligiousServicesButtonClick" text="Security Services" />
       <Button layoutX="207.0" layoutY="315.0" mnemonicParsing="false" onAction="#audioVideoServiceButtonClick" text="Audio/Visual Services" />
    </children>
 </AnchorPane>
