--- a/src/main/resources/edu/wpi/teamname/Views/MapViewPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/MapViewPage.fxml
@@ -6,9 +6,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.image.ImageView?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.wpi.teamname.views.MainPageViewController"
             prefHeight="400.0" prefWidth="600.0">
+
+    <ImageView image="/images/00_thegroundfloor.png" />
 
 </AnchorPane>
