--- a/src/main/resources/edu/wpi/teamname/Views/MapViewPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/MapViewPage.fxml
@@ -7,9 +7,12 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.image.ImageView?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.wpi.teamname.views.MainPageViewController"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="800.0" prefWidth="1200.0">
+
+    <JFXComboBox fx:id="mapSelectionComboBox" placeholder="Select Hospital Map" GridPane.columnIndex="2" GridPane.rowIndex="2" />
 
 </AnchorPane>
