--- a/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/ServiceRequestLandingPage.fxml
@@ -21,5 +21,6 @@
       <Button layoutX="207.0" layoutY="315.0" mnemonicParsing="false" onAction="#audioVideoServiceButtonClick" text="Audio/Visual Services" />
       <Button fx:id="computerServiceRequestButton" layoutX="207.0" layoutY="280.0" mnemonicParsing="false" onAction="#computerServiceRequestButtonClick" text="Computer Service Request" />
       <Button layoutX="207.0" layoutY="245.0" mnemonicParsing="false" onAction="#mapPageButtonClick" text="Map View" />
+      <Button layoutX="503.0" layoutY="350.0" mnemonicParsing="false" onAction="#goBackCallback" text="Go Back" />
    </children>
 </AnchorPane>
