--- a/src/main/resources/edu/wpi/teamname/Views/AudioVisualServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/AudioVisualServiceRequest.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseEntered="#setup" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.AudioVisualServiceRequestController">
+<AnchorPane onMouseEntered="#setup" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.Views.AudioVisualServiceRequestController">
    <children>
       <Text layoutX="222.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio/Visual Service Request" />
       <Text layoutX="24.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " />
