--- a/src/main/resources/edu/wpi/teamname/Views/ReligiousServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/Views/ReligiousServiceRequest.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane accessibleRole="TEXT" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="486.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.Views.ReligiousServiceRequest">
+<AnchorPane accessibleRole="TEXT" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="486.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.ReligiousServiceRequest">
    <children>
       <Text layoutX="225.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Religious Service Request" />
       <Text layoutX="16.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name:" wrappingWidth="87.98307228088379" />
