--- a/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: -fx-backgroundColor;" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.ServiceRequestLandingPageController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: -fx-backgroundColor;" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.ServiceRequestLandingPageController">
    <children>
       <TabPane id="tabContainer" fx:id="tabContainer" layoutX="554.0" layoutY="145.0" onDragEntered="#setup" side="LEFT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="300.0" tabMaxWidth="50.0" tabMinHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
