--- a/src/main/resources/edu/wpi/teamname/views/MapView.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/MapView.fxml
@@ -28,7 +28,7 @@
          </image>
       </ImageView>
       <Button fx:id="addLocationButton" mnemonicParsing="false" onAction="#createNewIconButton" text="Add Location" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
-      <Button fx:id="deleteLocationButton" alignment="CENTER" mnemonicParsing="false" text="Delete Location" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+      <Button fx:id="deleteLocationButton" alignment="CENTER" mnemonicParsing="false" onAction="#deletedButtonClick" text="Delete Location" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
       <AnchorPane fx:id="mapPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#setup" prefHeight="496.0" prefWidth="728.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
    </children>
 </GridPane>
