--- a/src/main/resources/edu/wpi/teamname/views/AudioVisualServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/AudioVisualServiceRequest.fxml
@@ -4,25 +4,29 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane onMouseEntered="#setup" prefHeight="400.0" prefWidth="599.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.AudioVisualServiceRequestController">
+<AnchorPane onMouseEntered="#setup" prefHeight="522.0" prefWidth="547.0" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.AudioVisualServiceRequestController">
    <children>
-      <Text layoutX="222.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio/Visual Service Request" />
-      <Text layoutX="24.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " />
-      <Text layoutX="31.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" />
-      <Text layoutX="33.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" />
-      <TextField fx:id="patientName" layoutX="103.0" layoutY="41.0" />
-      <TextField fx:id="roomNumber" layoutX="74.0" layoutY="72.0" />
-      <TextField fx:id="floor" layoutX="74.0" layoutY="103.0" />
-      <DatePicker fx:id="startDate" layoutX="95.0" layoutY="144.0" />
-      <Text layoutX="29.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Date:" />
-      <DatePicker fx:id="endDate" layoutX="95.0" layoutY="183.0" />
-      <Text layoutX="29.0" layoutY="199.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End Date:" />
-      <Text layoutX="29.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Time:" />
-      <TextField fx:id="startTime" layoutX="95.0" layoutY="224.0" />
-      <Text layoutX="28.0" layoutY="277.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End Time:" />
-      <TextField fx:id="endTime" layoutX="94.0" layoutY="260.0" />
-      <Button layoutX="265.0" layoutY="349.0" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" />
+      <Text layoutX="119.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Audio/Visual Service Request">
+         <font>
+            <Font size="24.0" />
+         </font></Text>
+      <Text layoutX="30.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " />
+      <Text layoutX="30.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" />
+      <Text layoutX="30.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" />
+      <TextField fx:id="patientName" layoutX="146.0" layoutY="69.0" />
+      <TextField fx:id="roomNumber" layoutX="146.0" layoutY="127.0" />
+      <TextField fx:id="floor" layoutX="146.0" layoutY="185.0" />
+      <DatePicker fx:id="startDate" layoutX="146.0" layoutY="246.0" />
+      <Text layoutX="31.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Date:" />
+      <DatePicker fx:id="endDate" layoutX="146.0" layoutY="301.0" />
+      <Text layoutX="31.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End Date:" />
+      <Text layoutX="31.0" layoutY="384.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Time:" />
+      <TextField fx:id="startTime" layoutX="146.0" layoutY="359.0" />
+      <Text layoutX="31.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End Time:" />
+      <TextField fx:id="endTime" layoutX="146.0" layoutY="417.0" />
+      <Button layoutX="542.0" layoutY="360.0" mnemonicParsing="false" onAction="#sendServiceRequest" prefHeight="33.0" prefWidth="67.0" text="Send" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
    </children>
 </AnchorPane>
