--- a/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: -fx-backgroundColor;" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.ServiceRequestLandingPageController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" styleClass="pane" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.ServiceRequestLandingPageController">
    <children>
-      <TabPane id="tabContainer" fx:id="tabContainer" layoutX="554.0" layoutY="145.0" onDragEntered="#setup" side="LEFT" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="300.0" tabMaxWidth="50.0" tabMinHeight="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane id="tabContainer" fx:id="tabContainer" layoutX="554.0" layoutY="145.0" onDragEntered="#setup" side="LEFT" styleClass="pane" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="300.0" tabMaxWidth="35.0" tabMinHeight="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
             <Tab fx:id="homeTab" closable="false" text="Home">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" onDragEntered="#setup" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane onDragEntered="#setup" styleClass="content-pane" />
                </content>
             </Tab>
           <Tab fx:id="medicalEquipmentTab" closable="false" text="Equipment Delivery">
